# dmwork-adapters

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: FUNDING.yml  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  dev-publish.yml  pr-review.yml  release.yml
hermes-channel-dmwork/: README.md  pyproject.toml
hermes-channel-dmwork/src/hermes_dmwork/: __init__.py  adapter.py  api.py  integration.py  mention.py  multi_account.py  protocol.py  types.py
hermes-channel-dmwork/tests/: __init__.py  conftest.py  test_adapter.py  test_api.py  test_content_disposition.py  test_mention.py  test_protocol.py  test_types.py
openclaw-channel-dmwork/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json
openclaw-channel-dmwork/cli/: bind.ts  doctor.test.ts  doctor.ts  index.ts  install.test.ts  install.ts  openclaw-cli.test.ts  openclaw-cli.ts  quickstart.test.ts  quickstart.ts  remove-account.ts  uninstall.ts  update.ts  utils.ts
openclaw-channel-dmwork/docs/: dmwork-cross-session-query-solution-v2.md  dmwork-cross-session-query-solution.md
openclaw-channel-dmwork/src/: accounts.ts  actions.test.ts  actions.ts  agent-tools.test.ts  agent-tools.ts  api-fetch.test.ts  api-fetch.ts  channel.test.ts  channel.ts  config-schema.ts  content-disposition.test.ts  group-md.test.ts  group-md.ts  inbound.test.ts  inbound.ts  manifest-schema-sync.test.ts  member-cache.test.ts  member-cache.ts  mention-utils.test.ts  mention-utils.ts  multi-bot-isolation.test.ts  reconnect-fixes.test.ts  sdk-compat.ts  (+6 more)
(+5 files in other folders)
